<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5134a8"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageSwitcher
            android:id="@+id/imgSwitcher"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="1">
        </ImageSwitcher>
        <TextView
            android:id="@+id/txtPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="bottom"
            >

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/playbutton"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/playButton"
                />

            <Button
                android:id="@+id/btnProgramacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/programacion"
                android:layout_weight="0.5"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/facebook"
                android:src="@drawable/facebook_p" />

            <ImageButton
                android:id="@+id/instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/instagram"
                android:src="@drawable/instagram_p" />

            <ImageButton
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/twitter"
                android:src="@drawable/twitter_p" />
            <ImageButton
                android:id="@+id/whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/whatsapp"
                android:src="@drawable/whatsapp_p" />
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
